; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libctf/common/extr_ctf_lib.c_ctf_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libctf/common/extr_ctf_lib.c_ctf_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDONLY = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ctf_open(i8* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @O_RDONLY, align 4
  %10 = call i32 @open64(i8* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i32, i32* @errno, align 4
  %17 = load i32*, i32** %5, align 8
  store i32 %16, i32* %17, align 4
  br label %18

18:                                               ; preds = %15, %12
  store i32* null, i32** %3, align 8
  br label %26

19:                                               ; preds = %2
  %20 = load i32, i32* %7, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = call i32* @ctf_fdopen(i32 %20, i32* %21)
  store i32* %22, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @close(i32 %23)
  %25 = load i32*, i32** %6, align 8
  store i32* %25, i32** %3, align 8
  br label %26

26:                                               ; preds = %19, %18
  %27 = load i32*, i32** %3, align 8
  ret i32* %27
}

declare dso_local i32 @open64(i8*, i32) #1

declare dso_local i32* @ctf_fdopen(i32, i32*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
